<resources>
    <string name="app_name">Andela Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="profile">My Profile</string>
    <string name="about_andela">About ALC</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_about_alc">About ALC</string>
    <string name="name">Akinrujomu Oluwatobiloba .S</string>
    <string name="track">Track</string>
    <string name="android">Android</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="email_add">tobiak2011@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="number">08102634860</string>
    <string name="slack_username">Slack Username</string>
    <string name="tobi">\@TOBI</string>
</resources>
